# canonicalwebteam.blog

./: .gitignore  CHANGELOG.txt  README.md  constraints.txt  pyproject.toml  qaa  requirements.txt  setup.py  test-requirements.txt
.circleci/: config.yml
.github/workflows/: pr.yaml  publish.yaml  tests.yml
canonicalwebteam/blog/: __init__.py  app.py  blog_api.py  blueprint.py  common_view_logic.py  constants.py  feeds.py  flask.py  helpers.py  logic.py  views.py  wordpress.py  wordpress_api.py
canonicalwebteam/blog_extension/: api.py  app.py  views.py
fixtures/vcr_cassettes/: article.yaml  articles.yaml  articles_with_metadata.yaml  categories.yaml  category_by_id.yaml  category_by_slug.yaml  django_homepage.yaml  get_article_context.yaml  get_complete_article.yaml  get_group_context.yaml  get_index_context.yaml  get_tag.yaml  get_topic_context.yaml  group_by_id.yaml  group_by_slug.yaml  media.yaml  tag_by_slug.yaml  tags_by_ids.yaml  tags_by_name.yaml  user_by_id.yaml  user_by_username.yaml
tests/: test_blog_api.py  test_blueprint.py  test_common_view_logic.py  test_django_views.py  test_wordpress.py  test_wordpress_api.py
tests/cassettes/: TestBlogAPI.test_get_articles.yaml  TestBlogAPI.test_get_articles_with_transforming_links.yaml  TestBlogAPI.test_get_articles_without_transforming_links.yaml  TestBlogAPI.test_get_thumbnail_setting.yaml  TestBlogAPI.test_it_does_not_transform_article_image.yaml  TestBlogAPI.test_it_transforms_article_image.yaml  TestBlogAPI.test_it_transforms_article_with_fixed_dimensions_image.yaml  TestBlogAPI.test_it_transforms_article_with_percent_width_dimension_image.yaml  TestBlueprint.test_archive_int_year_month.yaml  TestBlueprint.test_archives.yaml  TestBlueprint.test_article.yaml  TestBlueprint.test_article_not_exist.yaml  TestBlueprint.test_article_with_image.yaml  TestBlueprint.test_article_with_relative_path_image.yaml  TestBlueprint.test_author.yaml  TestBlueprint.test_author_feed.yaml  TestBlueprint.test_author_feed_not_exist.yaml  TestBlueprint.test_author_not_exist.yaml  TestBlueprint.test_category_not_exist.yaml  TestBlueprint.test_events_and_webinars.yaml  TestBlueprint.test_feed.yaml  TestBlueprint.test_group.yaml  TestBlueprint.test_homepage.yaml  (+17 more)
(+7 files in other folders)
