[tool.poetry]
name = "canonicalwebteam.blog"
version = "2.1.0"
description = "Flask extension and Django App to add a nice blog to your website"
authors = ["Canonical webteam <webteam@canonical.com>"]

packages = [
    { include = "canonicalwebteam" }
]

license = "LGPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
django = {version = "^2.2", optional = true}
Flask = {version = "^1.0", optional = true}
"canonicalwebteam.http" = "^1.0.1"

[tool.poetry.dev-dependencies]
flask_testing = "^0.7.1"
pytest = "^4.4"
django = "^2.2"
Flask = "^1.0.1"
vcrpy = "^2.0"


[tool.poetry.extras]
django = ["django"]
Flask = ["Flask"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

