[tool.poetry]
name = "canonicalwebteam.blog"
version = "4.0.1"
description = "Flask extension and Django App to add a nice blog to your website"
authors = ["Canonical webteam <webteam@canonical.com>"]

packages = [
    { include = "canonicalwebteam" }
]
readme = "README.md"

license = "LGPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
django = {version = "^2.2", extras = ["django"]}
Flask = {version = "^1.0", extra = ["flask"]}
feedgen = "^0.8"
requests = "^2.22"


[tool.poetry.dev-dependencies]
flask_testing = "^0.7.1"
pytest = "^5.0"
django = "^2.2"
Flask = "^1.0.1"
vcrpy = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
